2011-01-26  Mikael Pettersson <mikpe@it.uu.se>

	PR rtl-optimization/46856
	* gcc.c-torture/compile/pr46856.c: New test.

2011-01-26  Nicola Pero  <nicola.pero@meta-innovation.com>
	    Andrew Pinski  <pinskia@gmail.com>

	PR c/43082
	* gcc.dg/pr43082.c: New.

2011-01-26  DJ Delorie  <dj@redhat.com>

	PR rtl-optimization/46878
	* gcc.dg/pr46878-1.c: New test.

2011-01-26  Jakub Jelinek  <jakub@redhat.com>

	PR c++/47476
	* g++.dg/cpp0x/pr47476.C: New test.

2011-01-26  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc.c-torture/compile/20110126-1.c: New test.

2011-01-26  Jakub Jelinek  <jakub@redhat.com>

	PR c/47473
	* gcc.dg/torture/pr47473.c: New test.

2011-01-26  Jan Hubicka  <jh@suse.cz>

	PR target/47237
	* gcc.c-torture/execute/pr47237.c: New testcase.

2011-01-26  Jan Hubicka  <jh@suse.cz>

	PR tree-optimization/47190
	* gcc.dg/attr-weakref-3.c: New testcase.

2011-01-26  Dave Korn  <dave.korn.cygwin@gmail.com>

	PR c++/43601
	* gcc.dg/dll-9a.c: New test file.
	* gcc.dg/dll-11.c: Likewise.
	* gcc.dg/dll-12.c: Likewise.
	* gcc.dg/dll-12a.c: Likewise.
	* gcc.dg/dll-11a.c: Likewise.
	* gcc.dg/dll-9.c: Likewise.
	* gcc.dg/dll-10.c: Likewise.
	* gcc.dg/dll-10a.c: Likewise.
	* g++.dg/ext/dllexport4a.cc: Likewise.
	* g++.dg/ext/dllexport4.C: Likewise.
	* g++.dg/ext/dllexport5.C: Likewise.
	* g++.dg/ext/dllexport5a.cc: Likewise.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/46970
	* gcc.dg/graphite/pr46970.c: New.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/46215
	* gcc.dg/graphite/pr46215.c: New.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/46168
	* gcc.dg/graphite/pr46168.c: New.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/43657
	* gcc.dg/graphite/pr43657.c: New.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/29832
	* gfortran.dg/graphite/pr29832.f90: New.

2011-01-25  Sebastian Pop  <sebastian.pop@amd.com>
